# macro_dashboard

./: .env.production.example  .gitignore  API.md  CLAUDE.md  GEMINI.md  HISTORY.md  PLAN_future.md  README.md  docker-compose.prod.yml
backend/: .dockerignore  .env.example  Dockerfile  PLAN.md  docker-compose.yml  pyproject.toml
backend/app/: auth.py  cli.py  config.py  db.py  main.py  models.py  schemas.py
backend/app/routers/: admin.py  assets.py  auth.py  news.py  prices.py  widgets.py
backend/app/services/: ai.py  default_widgets.py  email.py  news.py  prices.py
backend/migrations/: env.py
backend/migrations/versions/: 02aa7e61713a_make_widgets_user_id_not_null.py  033d10d1c2d0_add_users_invite_codes_refresh_tokens_.py  0899255d7d07_add_news_feeds_and_news_articles_tables.py  64c6ba48a9aa_move_summary_to_cluster_drop_article_.py  6bc3f437a53e_add_summary_to_price_snapshots.py  a32d37208a59_add_widgets_table.py  c5336e6a41d5_add_password_reset_tokens_table.py  c9823b19d829_initial.py  e55cbd8eb5b9_add_day_high_day_low_volume_to_price_.py  ee3945059e8c_add_ai_columns_and_article_clusters_.py
docs/api/: admin.md  auth.md  data.md  news.md  overview.md
docs/history/: deployment.md  v1.md  v2.md  v3.md  v4.md
docs/plan/: ai_pipeline.md  deployment.md  future.md  small_fixes.md  v1_v2.md  v3.md  v4.md
frontend/: Caddyfile  Dockerfile  PLAN.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: admin.ts  assets.ts  auth.ts  client.ts  news.ts  prices.ts  types.ts  widgets.ts
frontend/src/components/: AddAssetModal.tsx  AddWidgetModal.tsx  AnalogClock.tsx  AssetCard.tsx  AssetWidget.tsx  ChangeBadge.tsx  (+7 more)
(+14 files in other folders)
