[tool.poetry]
name = "macro-dashboard-backend"
version = "2.0.0"
description = "FastAPI backend for macro_dashboard"
authors = ["Hyoseo Lee <hyoseo@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
psycopg = {extras = ["binary"], version = "^3.1.18"}
alembic = "^1.13.1"
yfinance = "^0.2.37"
apscheduler = "^3.10.4"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
python-multipart = "^0.0.26"
email-validator = "^2.3.0"
bcrypt = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.3.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
